# basic-grpc-emailverifier

./: CMakeLists.txt  README.md  Readme.md
proto/: emailverifier.proto
src/: client.cpp  server.cpp
